# snowflake-dao

./: .gitignore  LICENSE  README.md  pyproject.toml
src/snowflake_dao/: __about__.py  file_template.jinja  file_template.py  generator.py
src/snowflake_dao/cli/: __init__.py
